<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.artofarc.eai</groupId>
	<artifactId>esb0-utils</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>utils</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<!-- 
		<dependency>
			<groupId>com.artofarc.eai</groupId>
			<artifactId>artofarc-util</artifactId>
			<version>1.9.3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.artofarc.eai</groupId>
			<artifactId>esb0-core</artifactId>
			<version>1.9.3-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
 -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>wsdl4j</groupId>
			<artifactId>wsdl4j</artifactId>
			<version>1.6.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>xsom</artifactId>
			<version>2.3.3</version>
			<scope>provided</scope>
		</dependency>
	<dependency>
		<groupId>org.eclipse</groupId>
		<artifactId>yasson</artifactId>
		<version>1.0.1</version>
	</dependency>
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>jakarta.json</artifactId>
			<version>1.1.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>jakarta.json.bind</groupId>
		    <artifactId>jakarta.json.bind-api</artifactId>
		    <version>1.0.2</version>
		</dependency>
		<dependency>
			<groupId>net.sf.saxon</groupId>
			<artifactId>Saxon-HE</artifactId>
			<version>9.9.1-8</version>
			<classifier>xqj</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.fastinfoset</groupId>
			<artifactId>FastInfoset</artifactId>
			<version>1.2.18</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.fastinfoset</groupId>
			<artifactId>FastInfosetUtilities</artifactId>
			<version>1.2.18</version>
			<scope>provided</scope>
		</dependency>
		<!-- 
		<dependency>
		   <groupId>com.siemens.ct.exi</groupId>
		   <artifactId>exificient</artifactId>
		   <version>1.0.4</version>
		   <exclusions>
		   	<exclusion>
		   		<groupId>xml-apis</groupId>
		   		<artifactId>xml-apis</artifactId>
		   	</exclusion>
		   </exclusions>
		</dependency>
		 -->
		 
		<dependency>
			<groupId>org.apache.santuario</groupId>
			<artifactId>xmlsec</artifactId>
			<version>2.3.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.wss4j/wss4j-ws-security-dom -->
		<dependency>
			<groupId>org.apache.wss4j</groupId>
			<artifactId>wss4j-ws-security-dom</artifactId>
			<version>2.4.3</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.wss4j/wss4j-ws-security-common -->
		<dependency>
			<groupId>org.apache.wss4j</groupId>
			<artifactId>wss4j-ws-security-common</artifactId>
			<version>2.4.3</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.wss4j/wss4j-ws-security-stax
		<dependency>
			<groupId>org.apache.wss4j</groupId>
			<artifactId>wss4j-ws-security-stax</artifactId>
			<version>2.3.3</version>
			<scope>provided</scope>
		</dependency>
		-->
		
		<!-- https://mvnrepository.com/artifact/name.dmaus.schxslt/schxslt -->
		<dependency>
		    <groupId>name.dmaus.schxslt</groupId>
		    <artifactId>schxslt</artifactId>
		    <version>1.8.6</version>
		</dependency>

		<dependency>
		    <groupId>javax.transaction</groupId>
		    <artifactId>javax.transaction-api</artifactId>
		    <version>1.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>jakarta.jms</groupId>
			<artifactId>jakarta.jms-api</artifactId>
			<version>2.0.3</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>5.1.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.ibm.mq/com.ibm.mq.allclient
		<dependency>
		    <groupId>com.ibm.mq</groupId>
		    <artifactId>com.ibm.mq.allclient</artifactId>
		    <version>9.2.0.22</version>
			<scope>provided</scope>
		</dependency> -->

		<!-- https://mvnrepository.com/artifact/com.ibm.mq/com.ibm.mq.allclient -->
		<dependency>
		    <groupId>com.ibm.mq</groupId>
		    <artifactId>com.ibm.mq.allclient</artifactId>
		    <version>9.3.0.20</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.oracle.database.messaging/aqapi -->
		<dependency>
		    <groupId>com.oracle.database.messaging</groupId>
		    <artifactId>aqapi</artifactId>
		    <version>23.3.0.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc10 -->
		<dependency>
		    <groupId>com.oracle.database.jdbc</groupId>
		    <artifactId>ojdbc10</artifactId>
		    <version>19.24.0.0</version>
		</dependency>

<!-- https://mvnrepository.com/artifact/com.sun.xml.ws/wscompile
<dependency>
    <groupId>com.sun.xml.ws</groupId>
    <artifactId>wscompile</artifactId>
    <version>2.3.5</version>
    <scope>provided</scope>
</dependency>
 -->
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<configuration>
						<encoding>${project.build.sourceEncoding}</encoding>
						<release>11</release>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
